feat: added logic show ui and call api search giphy

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <nav class="main-nav" aria-label="main">
             <a href="#reactions">reactions</a>
             <a href="#entertainment">entertainment</a>
-            <a href="#trending">trending</a>
+            <a href="#randoms">randoms</a>
             <a href="#stickers">stickers</a>
             <a href="#artist">artist</a>
 
@@ -84,15 +84,16 @@
             />
           </form>
         </section>
+      
         <section class="main-container">
           <div class="popular" id="home">
-            <h1 id="popular">Popular && Trending Now on Coppola Movie App</h1>
+            <h1 id="popular">Popular && Trending Now on GIPHY</h1>
             <div class="box-container"></div>
             <div id="no-result"></div>
           </div>
 
-          <h1 id="trending">trending now</h1>
-          <div class="box">trending</div>
+          <h1 id="randoms">randoms</h1>
+          <div class="box">randoms</div>
 
           <h1 id="reactions">reactions</h1>
           <div class="box">reactions</div>
