feat: added login and register

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <nav class="main-nav" aria-label="main">
             <a href="#reactions">reactions</a>
             <a href="#entertainment">entertainment</a>
-            <a href="#randoms">randoms</a>
+            <a href="#">randoms</a>
             <a href="#stickers">stickers</a>
             <a href="#artist">artist</a>
 
@@ -56,14 +56,17 @@
               href="https://github.com/chicacode/coppola-movie-app"
               >portfolio</a
             >
+
           </nav>
           <nav class="sub-nav" aria-label="sub-nav">
             <ul>
               <li>header - navbar</li>
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
+              <li>
+                <a href="/login.html">Login</a>
+                </li>
+              <li>
+                <a href="/register.html">Sign up</a>
+              </li>
             </ul>
           </nav>
         </div>
