feat: adding login fn

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </nav>
           <nav class="sub-nav" aria-label="sub-nav">
             <ul>
-              <li>header - navbar</li>
+              <li>Account</li>
               <li>
                 <a href="/login.html">Login</a>
                 </li>
