--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
 
 <body>
     <header class="header">
+        <div class="header-container">
         <div class="logo">
             <a id="logo" href="./index.html"
               ><img
@@ -19,6 +20,7 @@
                 alt="Logo Image"
             /></a>
           </div>
+        </div>
     </header>
     <section class="register">
         <section class="register__container">
@@ -26,10 +28,15 @@
                 Register
             </h2>
             <form class="register__container--form">
-                <input class="input" type="text" id="name" placeholder="Name">
-                <input class="input" type="text" id="email" placeholder="Email">
-                <input class="input" type="password" id="Password" placeholder="Password">
-                <button class="button">Register</button>
+                <input class="input" type="text" id="email-field" placeholder="Email" required>
+                <input class="input" type="password" id="password-field" placeholder="Password" required>
+                <ul class="helper-text">
+                    <li class="length">Must be at least 8 characters long.</li>
+                    <li class="lowercase">Must contain a lowercase letter.</li>
+                    <li class="uppercase">Must contain an uppercase letter.</li>
+                    <li class="special">Must contain a number or special character.</li>
+                </ul>
+                <button class="button" type="submit" onclick="register()">Register</button>
 
             </form>
 
@@ -39,11 +46,18 @@
             </p>
         </section>
     </section>
-    <footer class="footer">
-        <a href="/ ">User Terms</a>
-        <a href="/ ">Privacy</a>
-        <a href="/ ">Help</a>
-    </footer>
+        <!-- FOOTER -->
+        <footer>
+            <p>&copy 2023 Gifme app, Inc. - Giphy Recreation</p>
+            <p>Chicacode &copy 2023</p>
+            <bloque>"Powered By GIPHY"</bloque>
+            <a id="logo" href="#home"
+              ><img
+                src="./assets/img/PoweredBy_200px-White_HorizLogo.png"
+                alt="Logo Image"
+            /></a>
+          </footer>
+          <script src="/js/login.js"></script>
 </body>
 
 </html>
