feat: added login and register fn

--- a/login.html
+++ b/login.html
@@ -31,9 +31,9 @@
                 <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
               </div>
             <form class="login__container--form" id="login-form">
-                <input aria-label="email" class="input" type="text" name="username" id="username" placeholder="Email">
-                <input aria-label="password" class="input" type="password" name="password" id="password" placeholder="Password">
-                <button class="button" type="submit"  id="login-form-submit" onclick="login()">Login</button>
+                <input aria-label="email" class="input" type="text" name="email-field" id="email-field" placeholder="Email">
+                <input aria-label="password" class="input" type="password" name="password" id="password-field" placeholder="Password">
+                <button class="button" type="submit"  id="login-form-submit" >Login</button>
                 <div class="login__container--remember-me">
                     <label for="remember">
                         <input type="checkbox" id="remember" name="remember" value="remember" class="check">
