--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
                     <li class="uppercase">Must contain an uppercase letter.</li>
                     <li class="special">Must contain a number or special character.</li>
                 </ul>
-                <button class="button" type="submit" onclick="register()">Register</button>
+                <button class="button" type="submit" id="button-submit">Sign Up</button>
 
             </form>
 
@@ -57,7 +57,7 @@
                 alt="Logo Image"
             /></a>
           </footer>
-          <script src="/js/login.js"></script>
+          <script src="/js/utils.js"></script>
 </body>
 
 </html>
