--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             /></a>
           </div>
           <nav class="main-nav" aria-label="main">
-            <a href="#reactions">reactions</a>
-            <a href="#entertainment">entertainment</a>
-            <a href="#">randoms</a>
-            <a href="#stickers">stickers</a>
-            <a href="#artist">artist</a>
-
+            <a href="https://giphy.com/reactions" target="_blank">Reactions</a>
+            <a href="https://giphy.com/entertainment" target="_blank">Entertainment</a>
+            <a href="https://giphy.com/sports" target="_blank">Randoms</a>
+            <a href="https://giphy.com/stickers" target="_blank">Stickers</a>
+            <a href="https://giphy.com/artists" target="_blank">Artist</a>
+            <a href="/favorites.html" target="_blank">Favorites</a>
             <a
               target="_blank"
-              href="https://github.com/chicacode/coppola-movie-app"
+              href="https://github.com/chicacode/gifme"
               >portfolio</a
             >
 
@@ -85,39 +85,30 @@
               type="text"
               id="search-input"
               name="search-input"
-              placeholder="Search..."
+              placeholder="search gif..."
               class="search-input"
             />
           </form>
         </section>
-      
+    
         <section class="main-container">
           <div class="popular" id="home">
             <h1 id="popular">Popular && Trending Now on GIPHY</h1>
             <div class="box-container"></div>
             <div id="no-result"></div>
           </div>
-
-          <h1 id="randoms">randoms</h1>
-          <div class="box">randoms</div>
-
-          <h1 id="reactions">reactions</h1>
-          <div class="box">reactions</div>
-
-          <h1 id="entertainment">entertainment</h1>
-          <div class="box">entertainment</div>
-
-          <h1 id="artist">artist</h1>
-          <div class="box">artist</div>
         </section>
 
         <!-- FOOTER -->
-        <footer>
-          <p>&copy 2023 Gifme app, Inc. - Giphy Recreation</p>
-          <p>Chicacode &copy 2023</p>
-          <bloque>"Powered By GIPHY"</bloque>
+        <footer class="footer">
+          <div class="footer_description-container">
+            <p>&copy 2023 Gifme app, Inc. - Giphy Recreation</p>
+            <p>Chicacode &copy 2023</p>
+            <bloque>"Powered By GIPHY"</bloque>
+          </div>
+
           <a id="logo" href="#home"
-            ><img
+            class="footer-logo"><img
               src="./assets/img/PoweredBy_200px-White_HorizLogo.png"
               alt="Logo Image"
           /></a>
