feat: adding footer login and register

--- a/login.html
+++ b/login.html
@@ -56,17 +56,20 @@
             </p>
         </section>
     </section>
-        <!-- FOOTER -->
-        <footer>
-            <p>&copy 2023 Gifme app, Inc. - Giphy Recreation</p>
-            <p>Chicacode &copy 2023</p>
-            <bloque>"Powered By GIPHY"</bloque>
-            <a id="logo" href="#home"
-              ><img
-                src="./assets/img/PoweredBy_200px-White_HorizLogo.png"
-                alt="Logo Image"
-            /></a>
-          </footer>
+      <!-- FOOTER -->
+      <footer class="footer">
+        <div class="footer_description-container">
+          <p>&copy 2023 Gifme app, Inc. - Giphy Recreation</p>
+          <p>Chicacode &copy 2023</p>
+          <bloque>"Powered By GIPHY"</bloque>
+        </div>
+
+        <a id="logo" href="#home"
+          class="footer-logo"><img
+            src="./assets/img/PoweredBy_200px-White_HorizLogo.png"
+            alt="Logo Image"
+        /></a>
+      </footer>
     <script src="/js/login.js"></script>
 </body>
 
