feat: added readme file

--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.1.96/css/materialdesignicons.min.css" integrity="sha512-NaaXI5f4rdmlThv3ZAVS44U9yNWJaUYWzPhvlg5SC7nMRvQYV9suauRK3gVbxh7qjE33ApTPD+hkOW78VSHyeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.1.96/css/materialdesignicons.min.css"
+      integrity="sha512-NaaXI5f4rdmlThv3ZAVS44U9yNWJaUYWzPhvlg5SC7nMRvQYV9suauRK3gVbxh7qjE33ApTPD+hkOW78VSHyeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300;1,400&family=Poppins:ital,wght@0,400;0,500;0,700;0,800;1,300;1,400;1,500;1,700&family=Tilt+Warp&display=swap"
       rel="stylesheet"
@@ -49,24 +58,23 @@
           </div>
           <nav class="main-nav" aria-label="main">
             <a href="https://giphy.com/reactions" target="_blank">Reactions</a>
-            <a href="https://giphy.com/entertainment" target="_blank">Entertainment</a>
+            <a href="https://giphy.com/entertainment" target="_blank"
+              >Entertainment</a
+            >
             <a href="https://giphy.com/sports" target="_blank">Randoms</a>
             <a href="https://giphy.com/stickers" target="_blank">Stickers</a>
             <a href="https://giphy.com/artists" target="_blank">Artist</a>
             <a href="/favorites.html" target="_blank">Favorites</a>
-            <a
-              target="_blank"
-              href="https://github.com/chicacode/gifme"
+            <a target="_blank" href="https://github.com/chicacode/gifme"
               >portfolio</a
             >
-
           </nav>
           <nav class="sub-nav" aria-label="sub-nav">
             <ul>
               <li>Account</li>
               <li>
                 <a href="/login.html">Login</a>
-                </li>
+              </li>
               <li>
                 <a href="/register.html">Sign up</a>
               </li>
@@ -90,7 +98,7 @@
             />
           </form>
         </section>
-    
+
         <section class="main-container">
           <div class="popular" id="home">
             <h1 id="popular">Popular && Trending Now on GIPHY</h1>
@@ -107,8 +115,8 @@
             <bloque>"Powered By GIPHY"</bloque>
           </div>
 
-          <a id="logo" href="#home"
-            class="footer-logo"><img
+          <a id="logo" href="#home" class="footer-logo"
+            ><img
               src="./assets/img/PoweredBy_200px-White_HorizLogo.png"
               alt="Logo Image"
           /></a>
